--- a/static/css/scrollbar.css
+++ b/static/css/scrollbar.css
@@ -1,31 +1,17 @@
 /* Estilos para el scroll */
-::-webkit-scrollbar {
-    width: 8px;
-  }
-  
-  ::-webkit-scrollbar-track {
-    background-color: var(--scrollbar-track-color);
-  }
-  
-  ::-webkit-scrollbar-thumb {
-    background-color: var(--scrollbar-thumb-color);
-    border-radius: 4px;
-  }
-  
-  ::-webkit-scrollbar-thumb:hover {
-    background-color: var(--scrollbar-thumb-hover-color);
-  }
+::-webkit-scrollbar { width: 5.5px; }
+
+::-webkit-scrollbar-track { background-color: #e4e9f7; }
+
+::-webkit-scrollbar-thumb { background-color: #2f2e31; }
   
   .dark::-webkit-scrollbar-track {
-    background-color: #333;
+    background-color: #2f2e31;
   }
   
   .dark::-webkit-scrollbar-thumb {
-    background-color: #555;
+    background-color: #5c5c5c;;
   }
   
-  .dark::-webkit-scrollbar-thumb:hover {
-    background-color: #777;
-  }
   
   
