--- a/templates/home.html
+++ b/templates/home.html
@@ -252,14 +252,13 @@
                 <p class="card-title">{{item[0]}}</p>
                 <p class="card-name-container">
                     <span class="card-name">{{item[3]}}</span>
-                    <span class="card-lastname">{{item[2]}}</span>
                 </p>
                 <p class="card-info">
                     <span class="job-title">Designer</span>
-                    <span class="date">13/02/04</span>
-                    <span class="phone"><i class="fas fa-phone"></i>{{item[1]}}</span>
+                    <span class="date">{{item[1]}}</span>
+                    <span class="phone"><i class="fas fa-phone"></i>{{item[4]}}</span>
                 </p>
-                <p class="card-description">A "designer" is a design expert. This description can be expanded upon to highlight their skills and experience.</p>
+                <p class="card-description">{{item[5]}}</p>
                 <div class="actions">
                 <div class="arrow">
                     <i class="fas fa-arrow-right card-icon"></i>
