--- a/templates/home.html
+++ b/templates/home.html
@@ -60,7 +60,7 @@
                     </a>
                 </li>
                 <li class="">
-                    <a href="../templates/settings.html">
+                    <a href="{{ url_for('settings') }}">
                         <i class='bx bx-cog icon'></i>
                         <span class="text nav-text">Ajustes</span>
                     </a>
