--- a/templates/home.html
+++ b/templates/home.html
@@ -247,29 +247,30 @@
         <div class="modal-backdrop hidden"></div>
         <div class="card-list" id="cardList">
             {% for item in filas %}
-            <div class="card-item" data-job-type="designer">
+            <div class="card-item" data-job-type="designer" onclick="openDetails('{{ item[0] }}', '{{ item[1] }}', '{{ item[3] }}', '{{ item[4] }}', '{{ item[5] }}')">
                 <img src="../static/img/editor.jpg" alt="Card Image">
-                <p class="card-title">{{item[0]}}</p>
+                <p class="card-title">{{ item[0] }}</p>
                 <p class="card-name-container">
-                    <span class="card-name">{{item[3]}}</span>
+                    <span class="card-name">{{ item[3] }}</span>
                 </p>
                 <p class="card-info">
                     <span class="job-title">Designer</span>
-                    <span class="date">{{item[1]}}</span>
-                    <span class="phone"><i class="fas fa-phone"></i>{{item[4]}}</span>
+                    <span class="date">{{ item[1] }}</span>
+                    <span class="phone"><i class="fas fa-phone"></i>{{ item[4] }}</span>
                 </p>
-                <p class="card-description">{{item[5]}}</p>
+                <p class="card-description">{{ item[5] }}</p>
                 <div class="actions">
-                <div class="arrow">
-                    <i class="fas fa-arrow-right card-icon"></i>
-                </div>
-                <div class="delete" style="cursor: pointer;">
-                    <i class="fas fa-trash-alt" title="Borrar"></i>
+                    <div class="arrow">
+                        <i class="fas fa-arrow-right card-icon"></i>
+                    </div>
+                    <div class="delete" style="cursor: pointer;" onclick="event.stopPropagation();">
+                        <i class="fas fa-trash-alt" title="Borrar"></i>
+                    </div>
                 </div>
             </div>
-        </div>
             {% endfor %}
         </div>
+                
 <div class="confirmation-modal hidden" id="confirmationModal">
     <div class="modal-content">
         <h3>¿Estás seguro de que deseas eliminar?</h3>
