--- a/templates/home.html
+++ b/templates/home.html
@@ -128,57 +128,57 @@
                             <label>Tipo de trabajo:</label>
                             <div class="job-type-buttons">
                                 <label class="job-type-btn">
-                                    <input type="checkbox" name="job-type" autocomplete="off" value="Pendon" onchange="updatePreview()"> 
+                                    <input type="checkbox" name="job-type" autocomplete="off" value="1" onchange="updatePreview()"> 
                                     <span class="custom-checkbox"></span>
                                     Pendón
                                 </label>
                                 <label class="job-type-btn">
-                                    <input type="checkbox" name="job-type" autocomplete="off" value="Vinilo" onchange="updatePreview()">
+                                    <input type="checkbox" name="job-type" autocomplete="off" value="2" onchange="updatePreview()">
                                     <span class="custom-checkbox"></span>
                                     Vinilo
                                 </label>
                                 <label class="job-type-btn">
-                                    <input type="checkbox" name="job-type" autocomplete="off" value="Estructura" onchange="updatePreview()">
+                                    <input type="checkbox" name="job-type" autocomplete="off" value="3" onchange="updatePreview()">
                                     <span class="custom-checkbox"></span>
                                     Estructura
                                 </label>
                                 <label class="job-type-btn">
-                                    <input type="checkbox" name="job-type" autocomplete="off" value="Valla-publicitaria" onchange="updatePreview()">
+                                    <input type="checkbox" name="job-type" autocomplete="off" value="4" onchange="updatePreview()">
                                     <span class="custom-checkbox"></span>
                                     Valla Publicitaria
                                 </label>
                                 <label class="job-type-btn">
-                                    <input type="checkbox" name="job-type" autocomplete="off" value="Presentacion" onchange="updatePreview()">
+                                    <input type="checkbox" name="job-type" autocomplete="off" value="5" onchange="updatePreview()">
                                     <span class="custom-checkbox"></span>
                                     Presentación
                                 </label>
                                 <label class="job-type-btn">
-                                    <input type="checkbox" name="job-type" autocomplete="off" value="Volantes" onchange="updatePreview()">
+                                    <input type="checkbox" name="job-type" autocomplete="off" value="6" onchange="updatePreview()">
                                     <span class="custom-checkbox"></span>
                                     Volantes
                                 </label>
                                 <label class="job-type-btn">
-                                    <input type="checkbox" name="job-type" autocomplete="off" value="Banderin" onchange="updatePreview()">
+                                    <input type="checkbox" name="job-type" autocomplete="off" value="7" onchange="updatePreview()">
                                     <span class="custom-checkbox"></span>
                                     Banderín
                                 </label>
                                 <label class="job-type-btn">
-                                    <input type="checkbox" name="job-type" autocomplete="off" value="Camisa" onchange="updatePreview()">
+                                    <input type="checkbox" name="job-type" autocomplete="off" value="8" onchange="updatePreview()">
                                     <span class="custom-checkbox"></span>
                                     Camisa
                                 </label>
                                 <label class="job-type-btn">
-                                    <input type="checkbox" name="job-type" autocomplete="off" value="Neoflex" onchange="updatePreview()">
+                                    <input type="checkbox" name="job-type" autocomplete="off" value="9" onchange="updatePreview()">
                                     <span class="custom-checkbox"></span>
                                     NeoFlex
                                 </label>
                                 <label class="job-type-btn">
-                                    <input type="checkbox" name="job-type" autocomplete="off" value="Corte-v" onchange="updatePreview()">
+                                    <input type="checkbox" name="job-type" autocomplete="off" value="10" onchange="updatePreview()">
                                     <span class="custom-checkbox"></span>
                                     Corte V
                                 </label>
                                 <label class="job-type-btn">
-                                    <input type="checkbox" name="job-type" autocomplete="off" value="Acrilico" onchange="updatePreview()">
+                                    <input type="checkbox" name="job-type" autocomplete="off" value="11" onchange="updatePreview()">
                                     <span class="custom-checkbox"></span>
                                     Acrílico
                                 </label>
