--- a/templates/home.html
+++ b/templates/home.html
@@ -246,7 +246,7 @@
         </div>
         <div class="modal-backdrop hidden"></div>
         <div class="card-list" id="cardList">
-        {% for item, item2 in zip(filas, tipos) %}
+        {% for item, item2 in filas %}
             <div class="card-item" data-job-type="designer" style="cursor: pointer;">
                 <a href="{{ url_for('work', user=item[7] )}}" style="text-decoration: none;color: black">
                     <img src="../static/img/editor.jpg" alt="Card Image">
