--- a/templates/work.html
+++ b/templates/work.html
@@ -92,6 +92,7 @@
     <p style="text-align: center;">{{details[0][10]}}</p>
     <p style="text-align: center;">{{details[0][11]}}</p>
     <p style="text-align: center;">{{details[0][12]}}</p>
+    <p style="text-align: center;">{{types}}</p>
 
 
                 
