--- a/templates/home.html
+++ b/templates/home.html
@@ -265,29 +265,29 @@
         <div class="modal-backdrop hidden"></div>
         <div class="card-list" id="cardList">
         {% for item, item2 in filas %}
-            <div class="card-item" data-job-type="designer" style="cursor: pointer;">
-                <a href="{{ url_for('work', user=item[6] )}}" style="text-decoration: none;color: black">
-                    <img src="../static/img/editor.jpg" alt="Card Image">
-                    <p class="card-title">{{ item[0] }}</p>
-                    <p class="card-name-container">
-                        <span class="card-name">{{ item[3] }}</span>
-                    </p>
-                    <p class="card-info">
-                        <span class="job-title">Designer</span>
-                        <span class="date">{{ item[1] }}</span>
-                        <span class="phone"><i class="fas fa-phone"></i>{{ item[4] }}</span>
-                    </p>
-                    <p class="card-description">{{ item2 }}</p>
-                    <div class="actions">
-                        <div class="arrow">
-                            <i class="fas fa-arrow-right card-icon"></i>
-                        </div>
-                        <div class="delete" style="cursor: pointer;" onclick="event.stopPropagation();">
-                            <i class="fas fa-trash-alt" title="Borrar"></i>
-                        </div>
-                    </div>
-                </a>
+<div class="card-item" data-job-type="designer" style="cursor: pointer;">
+    <a href="{{ url_for('work', user=item[6] )}}" style="text-decoration: none;color: black">
+        <img src="../static/img/editor.jpg" alt="Card Image">
+        <p class="card-title">{{ item[0] }}</p>
+        <p class="card-name-container">
+            <span class="card-name">{{ item[3] }}</span>
+        </p>
+        <p class="card-info">
+            <span class="job-title">Designer</span>
+            <span class="date">{{ item[1] }}</span>
+            <span class="phone"><i class="fas fa-phone"></i>{{ item[4] }}</span>
+        </p>
+        <p class="card-description">{{ item2 }}</p>
+        <div class="actions">
+            <div class="arrow">
+                <i class="fas fa-arrow-right card-icon" title="Abrir"></i>
             </div>
+            <div class="delete" style="cursor: pointer;" onclick="handleDelete(event)">
+                <i class="fas fa-trash-alt" title="Borrar"></i>
+            </div>
+        </div>
+    </a>
+</div>
         {% endfor %}
 
         </div>
